--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   background-color: azure;
-  cursor: grabbing;
+  cursor: crosshair;
 }
 
 .container {
@@ -32,7 +32,7 @@
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
-  transition: 20s;
+  transition: 8s;
   opacity: 0;
   pointer-events: none;
   width: 100%;
